--- a/static/index.html
+++ b/static/index.html
@@ -33,42 +33,41 @@
     </style>
 </head>
 <body class="min-h-screen bg-gradient-to-br from-blue-50 to-purple-100 p-4 sm:p-8 text-gray-800">
-    <div class="max-w-4xl mx-auto bg-white rounded-xl shadow-2xl overflow-hidden border border-purple-200">
-        <header class="bg-gradient-to-r from-purple-700 to-indigo-800 text-white p-6 sm:p-8">
-            <h1 class="text-3xl sm:text-4xl font-extrabold mb-2 text-center tracking-tight">Personalized Learning Path</h1>
-            <p class="text-purple-200 text-center text-lg">Your AI-powered guide for Personalized Learning Experience.</p>
-        </header>
-        <main class="p-6 sm:p-8">
-            <!-- Knowledge Graph Generation Section -->
-            <div class="mb-8 p-6 bg-green-50 border border-green-200 rounded-lg shadow-inner">
-                <label for="kgTopicInput" class="block text-lg font-semibold text-green-800 mb-2">
-                    Enter a topic to generate a Knowledge Graph:
-                </label>
-                <input
-                    type="text"
-                    id="kgTopicInput"
-                    placeholder="e.g., 'Machine Learning', 'Data Science', 'Web Development'"
-                    class="w-full p-3 border border-green-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-transparent transition duration-200 text-gray-700"
-                />
-                <button
-                    id="generateKgBtn"
-                    class="mt-4 w-full sm:w-auto px-6 py-3 rounded-lg font-semibold text-white transition duration-300 ease-in-out bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 shadow-md hover:shadow-lg"
-                >
-                    Generate Knowledge Graph
-                </button>
-                <div id="kgLoadingIndicator" class="hidden flex justify-center items-center py-4">
-                    <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-green-500"></div>
-                    <p class="ml-2 text-green-600">Generating KG...</p>
-                </div>
-                <div id="kgMessageDisplay" class="mt-2 text-green-700 font-medium"></div>
-                <div id="kgErrorDisplay" class="mt-2 text-red-700 font-medium"></div>
-            </div>
-            <!-- Knowledge Graph Display Section -->
-            <h2 class="text-xl font-bold text-gray-700 mb-4">Important SubTopics</h2>
-            <div id="knowledgeGraphContainer" class="mt-8 p-6 bg-gray-50 border border-gray-200 rounded-lg shadow-inner">
-                <!-- Knowledge graph will be dynamically rendered here -->
-            </div>
-        </main>
+    <!-- Header Section -->
+    <header class="bg-gradient-to-r from-purple-700 to-indigo-800 text-white rounded-lg shadow-lg p-6 sm:p-8 mb-8 w-full">
+        <h1 class="text-5xl sm:text-6xl font-extrabold text-center tracking-tight mb-4">Personalized Learning Path</h1>
+        <p class="text-purple-200 text-center text-xl">Your AI-powered guide to mastering concepts.</p>
+    </header>
+
+    <!-- Knowledge Graph Section -->
+    <section class="bg-white rounded-lg shadow-lg p-6 sm:p-8 mb-8 border border-gray-200 w-full">
+        <h2 class="text-2xl font-bold text-gray-700 mb-4">Generate Knowledge Graph</h2>
+        <label for="kgTopicInput" class="block text-lg font-semibold text-gray-800 mb-2">
+            Enter a topic:
+        </label>
+        <input
+            type="text"
+            id="kgTopicInput"
+            placeholder="e.g., 'Machine Learning', 'Data Science'"
+            class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200 text-gray-700 mb-4"
+        />
+        <button
+            id="generateKgBtn"
+            class="w-full sm:w-auto px-6 py-3 rounded-lg font-semibold text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 shadow-md hover:shadow-lg"
+        >
+            Generate Knowledge Graph
+        </button>
+        <div id="kgLoadingIndicator" class="hidden flex justify-center items-center py-4">
+            <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500"></div>
+            <p class="ml-2 text-blue-600">Generating...</p>
+        </div>
+        <div id="kgMessageDisplay" class="mt-4 text-blue-700 font-medium"></div>
+        <div id="kgErrorDisplay" class="mt-4 text-red-700 font-medium"></div>
+    </section>
+    <!-- Knowledge Graph Display Section -->
+    <h2 class="text-xl font-bold text-gray-700 mb-4">Important SubTopics</h2>
+    <div id="knowledgeGraphContainer" class="mt-8 p-6 bg-gray-50 border border-gray-200 rounded-lg shadow-inner">
+        <!-- Knowledge graph will be dynamically rendered here -->
     </div>
     <!-- Goal Input Section -->
     <div class="mb-8 p-6 bg-indigo-50 border border-indigo-200 rounded-lg shadow-inner">
@@ -123,6 +122,30 @@
         >
             Reset All
         </button>
+    </section>
+    <!-- Chat Section -->
+    <section id="chatSection" class="mt-12 p-6 bg-gray-50 border border-gray-200 rounded-lg shadow-inner">
+        <h2 class="text-xl font-bold text-gray-700 mb-4">Ask Gemini</h2>
+        <div class="mb-4">
+            <label for="chatInput" class="block text-lg font-semibold text-gray-800 mb-2">
+                Type your question:
+            </label>
+            <textarea
+                id="chatInput"
+                rows="3"
+                placeholder="e.g., 'What are the prerequisites for Deep Learning?'"
+                class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200 text-gray-700"
+            ></textarea>
+            <button
+                id="sendChatBtn"
+                class="mt-4 w-full sm:w-auto px-6 py-3 rounded-lg font-semibold text-white transition duration-300 ease-in-out bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 shadow-md hover:shadow-lg"
+            >
+                Ask Gemini
+            </button>
+        </div>
+        <div id="chatResponse" class="mt-4 p-4 bg-blue-50 border border-blue-200 rounded-lg shadow-inner text-gray-800">
+            <!-- Chat response will be displayed here -->
+        </div>
     </section>
     <script src="/static/script.js"></script>
 </body>
